
PROJECT(modules)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(${libratbox_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${libratbox_BINARY_DIR} ${bluebox_BINARY_DIR})
INCLUDE_DIRECTORIES(${bluebox_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${bluebox_SOURCE_DIR}/libltdl)

ADD_LIBRARY(m_die MODULE core/m_die.c)
SET_TARGET_PROPERTIES(m_die PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_die DESTINATION modules)

ADD_LIBRARY(m_error MODULE core/m_error.c)
SET_TARGET_PROPERTIES(m_error PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_error DESTINATION modules)

ADD_LIBRARY(m_join MODULE core/m_join.c)
SET_TARGET_PROPERTIES(m_join PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_join DESTINATION modules)

ADD_LIBRARY(m_kick MODULE core/m_kick.c)
SET_TARGET_PROPERTIES(m_kick PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_kick DESTINATION modules)

ADD_LIBRARY(m_kill MODULE core/m_kill.c)
SET_TARGET_PROPERTIES(m_kill PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_kill DESTINATION modules)

ADD_LIBRARY(m_message MODULE core/m_message.c)
SET_TARGET_PROPERTIES(m_message PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_message DESTINATION modules)

ADD_LIBRARY(m_mode MODULE core/m_mode.c)
SET_TARGET_PROPERTIES(m_mode PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_mode DESTINATION modules)

ADD_LIBRARY(m_nick MODULE core/m_nick.c)
SET_TARGET_PROPERTIES(m_nick PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_nick DESTINATION modules)

ADD_LIBRARY(m_part MODULE core/m_part.c)
SET_TARGET_PROPERTIES(m_part PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_part DESTINATION modules)

ADD_LIBRARY(m_quit MODULE core/m_quit.c)
SET_TARGET_PROPERTIES(m_quit PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_quit DESTINATION modules)

ADD_LIBRARY(m_server MODULE core/m_server.c)
SET_TARGET_PROPERTIES(m_server PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_server DESTINATION modules)

ADD_LIBRARY(m_squit MODULE core/m_squit.c)
SET_TARGET_PROPERTIES(m_squit PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_squit DESTINATION modules)

ADD_LIBRARY(m_accept MODULE m_accept.c)
SET_TARGET_PROPERTIES(m_accept PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_accept DESTINATION modules)

ADD_LIBRARY(m_admin MODULE m_admin.c)
SET_TARGET_PROPERTIES(m_admin PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_admin DESTINATION modules)

ADD_LIBRARY(m_adminwall MODULE m_adminwall.c)
SET_TARGET_PROPERTIES(m_adminwall PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_adminwall DESTINATION modules)

ADD_LIBRARY(m_away MODULE m_away.c)
SET_TARGET_PROPERTIES(m_away PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_away DESTINATION modules)

ADD_LIBRARY(m_cap MODULE m_cap.c)
SET_TARGET_PROPERTIES(m_cap PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_cap DESTINATION modules)

ADD_LIBRARY(m_capab MODULE m_capab.c)
SET_TARGET_PROPERTIES(m_capab PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_capab DESTINATION modules)

ADD_LIBRARY(m_close MODULE m_close.c)
SET_TARGET_PROPERTIES(m_close PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_close DESTINATION modules)

ADD_LIBRARY(m_cmessage MODULE m_cmessage.c)
SET_TARGET_PROPERTIES(m_cmessage PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_cmessage DESTINATION modules)

ADD_LIBRARY(m_connect MODULE m_connect.c)
SET_TARGET_PROPERTIES(m_connect PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_connect DESTINATION modules)

ADD_LIBRARY(m_dline MODULE m_dline.c)
SET_TARGET_PROPERTIES(m_dline PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_dline DESTINATION modules)

ADD_LIBRARY(m_encap MODULE m_encap.c)
SET_TARGET_PROPERTIES(m_encap PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_encap DESTINATION modules)

ADD_LIBRARY(m_gline MODULE m_gline.c)
SET_TARGET_PROPERTIES(m_gline PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_gline DESTINATION modules)

ADD_LIBRARY(m_gungline MODULE m_gungline.c)
SET_TARGET_PROPERTIES(m_gungline PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_gungline DESTINATION modules)

ADD_LIBRARY(m_help MODULE m_help.c)
SET_TARGET_PROPERTIES(m_help PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_help DESTINATION modules)

ADD_LIBRARY(m_info MODULE m_info.c)
SET_TARGET_PROPERTIES(m_info PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_info DESTINATION modules)

ADD_LIBRARY(m_invite MODULE m_invite.c)
SET_TARGET_PROPERTIES(m_invite PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_invite DESTINATION modules)

ADD_LIBRARY(m_ison MODULE m_ison.c)
SET_TARGET_PROPERTIES(m_ison PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_ison DESTINATION modules)

ADD_LIBRARY(m_kline MODULE m_kline.c)
SET_TARGET_PROPERTIES(m_kline PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_kline DESTINATION modules)

ADD_LIBRARY(m_knock MODULE m_knock.c)
SET_TARGET_PROPERTIES(m_knock PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_knock DESTINATION modules)

ADD_LIBRARY(m_links MODULE m_links.c)
SET_TARGET_PROPERTIES(m_links PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_links DESTINATION modules)

ADD_LIBRARY(m_list MODULE m_list.c)
SET_TARGET_PROPERTIES(m_list PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_list DESTINATION modules)

ADD_LIBRARY(m_locops MODULE m_locops.c)
SET_TARGET_PROPERTIES(m_locops PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_locops DESTINATION modules)

ADD_LIBRARY(m_lusers MODULE m_lusers.c)
SET_TARGET_PROPERTIES(m_lusers PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_lusers DESTINATION modules)

ADD_LIBRARY(m_map MODULE m_map.c)
SET_TARGET_PROPERTIES(m_map PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_map DESTINATION modules)

ADD_LIBRARY(m_monitor MODULE m_monitor.c)
SET_TARGET_PROPERTIES(m_monitor PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_monitor DESTINATION modules)

ADD_LIBRARY(m_motd MODULE m_motd.c)
SET_TARGET_PROPERTIES(m_motd PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_motd DESTINATION modules)

ADD_LIBRARY(m_names MODULE m_names.c)
SET_TARGET_PROPERTIES(m_names PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_names DESTINATION modules)

ADD_LIBRARY(m_oper MODULE m_oper.c)
SET_TARGET_PROPERTIES(m_oper PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_oper DESTINATION modules)

ADD_LIBRARY(m_operspy MODULE m_operspy.c)
SET_TARGET_PROPERTIES(m_operspy PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_operspy DESTINATION modules)

ADD_LIBRARY(m_pass MODULE m_pass.c)
SET_TARGET_PROPERTIES(m_pass PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_pass DESTINATION modules)

ADD_LIBRARY(m_ping MODULE m_ping.c)
SET_TARGET_PROPERTIES(m_ping PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_ping DESTINATION modules)

ADD_LIBRARY(m_pong MODULE m_pong.c)
SET_TARGET_PROPERTIES(m_pong PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_pong DESTINATION modules)

ADD_LIBRARY(m_post MODULE m_post.c)
SET_TARGET_PROPERTIES(m_post PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_post DESTINATION modules)

ADD_LIBRARY(m_rehash MODULE m_rehash.c)
SET_TARGET_PROPERTIES(m_rehash PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_rehash DESTINATION modules)

ADD_LIBRARY(m_restart MODULE m_restart.c)
SET_TARGET_PROPERTIES(m_restart PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_restart DESTINATION modules)

ADD_LIBRARY(m_resv MODULE m_resv.c)
SET_TARGET_PROPERTIES(m_resv PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_resv DESTINATION modules)

ADD_LIBRARY(m_services MODULE m_services.c)
SET_TARGET_PROPERTIES(m_services PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_services DESTINATION modules)

ADD_LIBRARY(m_set MODULE m_set.c)
SET_TARGET_PROPERTIES(m_set PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_set DESTINATION modules)

ADD_LIBRARY(m_stats MODULE m_stats.c)
SET_TARGET_PROPERTIES(m_stats PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_stats DESTINATION modules)

ADD_LIBRARY(m_svinfo MODULE m_svinfo.c)
SET_TARGET_PROPERTIES(m_svinfo PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_svinfo DESTINATION modules)

ADD_LIBRARY(m_tb MODULE m_tb.c)
SET_TARGET_PROPERTIES(m_tb PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_tb DESTINATION modules)

ADD_LIBRARY(m_testline MODULE m_testline.c)
SET_TARGET_PROPERTIES(m_testline PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_testline DESTINATION modules)

ADD_LIBRARY(m_testmask MODULE m_testmask.c)
SET_TARGET_PROPERTIES(m_testmask PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_testmask DESTINATION modules)

ADD_LIBRARY(m_time MODULE m_time.c)
SET_TARGET_PROPERTIES(m_time PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_time DESTINATION modules)

ADD_LIBRARY(m_topic MODULE m_topic.c)
SET_TARGET_PROPERTIES(m_topic PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_topic DESTINATION modules)

ADD_LIBRARY(m_trace MODULE m_trace.c)
SET_TARGET_PROPERTIES(m_trace PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_trace DESTINATION modules)

ADD_LIBRARY(m_unreject MODULE m_unreject.c)
SET_TARGET_PROPERTIES(m_unreject PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_unreject DESTINATION modules)

ADD_LIBRARY(m_user MODULE m_user.c)
SET_TARGET_PROPERTIES(m_user PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_user DESTINATION modules)

ADD_LIBRARY(m_userhost MODULE m_userhost.c)
SET_TARGET_PROPERTIES(m_userhost PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_userhost DESTINATION modules)

ADD_LIBRARY(m_version MODULE m_version.c)
SET_TARGET_PROPERTIES(m_version PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_version DESTINATION modules)

ADD_LIBRARY(m_wallops MODULE m_wallops.c)
SET_TARGET_PROPERTIES(m_wallops PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_wallops DESTINATION modules)

ADD_LIBRARY(m_who MODULE m_who.c)
SET_TARGET_PROPERTIES(m_who PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_who DESTINATION modules)

ADD_LIBRARY(m_whois MODULE m_whois.c)
SET_TARGET_PROPERTIES(m_whois PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_whois DESTINATION modules)

ADD_LIBRARY(m_whowas MODULE m_whowas.c)
SET_TARGET_PROPERTIES(m_whowas PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_whowas DESTINATION modules)

ADD_LIBRARY(m_xline MODULE m_xline.c)
SET_TARGET_PROPERTIES(m_xline PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS m_xline DESTINATION modules)

ADD_LIBRARY(static_modules MODULE static_modules.c)
SET_TARGET_PROPERTIES(static_modules PROPERTIES VERSION 4.2.0 SOVERSION 4 PREFIX "")
INSTALL(TARGETS static_modules DESTINATION modules)
