
PROJECT(modules)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(${libratbox_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${libratbox_BINARY_DIR} ${bluebox_BINARY_DIR})
INCLUDE_DIRECTORIES(${bluebox_SOURCE_DIR}/include)

ADD_LIBRARY(m_die MODULE core/m_die.c)
SET_TARGET_PROPERTIES(m_die PROPERTIES PREFIX "")
INSTALL(TARGETS m_die DESTINATION modules RENAME m_die.so)

ADD_LIBRARY(m_error MODULE core/m_error.c)
SET_TARGET_PROPERTIES(m_error PROPERTIES PREFIX "")
INSTALL(TARGETS m_error DESTINATION modules RENAME m_error.so)

ADD_LIBRARY(m_join MODULE core/m_join.c)
SET_TARGET_PROPERTIES(m_join PROPERTIES PREFIX "")
INSTALL(TARGETS m_join DESTINATION modules RENAME m_join.so)

ADD_LIBRARY(m_kick MODULE core/m_kick.c)
SET_TARGET_PROPERTIES(m_kick PROPERTIES PREFIX "")
INSTALL(TARGETS m_kick DESTINATION modules RENAME m_kick.so)

ADD_LIBRARY(m_kill MODULE core/m_kill.c)
SET_TARGET_PROPERTIES(m_kill PROPERTIES PREFIX "")
INSTALL(TARGETS m_kill DESTINATION modules RENAME m_kill.so)

ADD_LIBRARY(m_message MODULE core/m_message.c)
SET_TARGET_PROPERTIES(m_message PROPERTIES PREFIX "")
INSTALL(TARGETS m_message DESTINATION modules RENAME m_message.so)

ADD_LIBRARY(m_mode MODULE core/m_mode.c)
SET_TARGET_PROPERTIES(m_mode PROPERTIES PREFIX "")
INSTALL(TARGETS m_mode DESTINATION modules RENAME m_mode.so)

ADD_LIBRARY(m_nick MODULE core/m_nick.c)
SET_TARGET_PROPERTIES(m_nick PROPERTIES PREFIX "")
INSTALL(TARGETS m_nick DESTINATION modules RENAME m_nick.so)

ADD_LIBRARY(m_part MODULE core/m_part.c)
SET_TARGET_PROPERTIES(m_part PROPERTIES PREFIX "")
INSTALL(TARGETS m_part DESTINATION modules RENAME m_part.so)

ADD_LIBRARY(m_quit MODULE core/m_quit.c)
SET_TARGET_PROPERTIES(m_quit PROPERTIES PREFIX "")
INSTALL(TARGETS m_quit DESTINATION modules RENAME m_quit.so)

ADD_LIBRARY(m_server MODULE core/m_server.c)
SET_TARGET_PROPERTIES(m_server PROPERTIES PREFIX "")
INSTALL(TARGETS m_server DESTINATION modules RENAME m_server.so)

ADD_LIBRARY(m_squit MODULE core/m_squit.c)
SET_TARGET_PROPERTIES(m_squit PROPERTIES PREFIX "")
INSTALL(TARGETS m_squit DESTINATION modules RENAME m_squit.so)

ADD_LIBRARY(m_accept MODULE m_accept.c)
SET_TARGET_PROPERTIES(m_accept PROPERTIES PREFIX "")
INSTALL(TARGETS m_accept DESTINATION modules/autoload RENAME m_accept.so)

ADD_LIBRARY(m_admin MODULE m_admin.c)
SET_TARGET_PROPERTIES(m_admin PROPERTIES PREFIX "")
INSTALL(TARGETS m_admin DESTINATION modules/autoload RENAME m_admin.so)

ADD_LIBRARY(m_adminwall MODULE m_adminwall.c)
SET_TARGET_PROPERTIES(m_adminwall PROPERTIES PREFIX "")
INSTALL(TARGETS m_adminwall DESTINATION modules/autoload RENAME m_adminwall.so)

ADD_LIBRARY(m_away MODULE m_away.c)
SET_TARGET_PROPERTIES(m_away PROPERTIES PREFIX "")
INSTALL(TARGETS m_away DESTINATION modules/autoload RENAME m_away.so)

ADD_LIBRARY(m_cap MODULE m_cap.c)
SET_TARGET_PROPERTIES(m_cap PROPERTIES PREFIX "")
INSTALL(TARGETS m_cap DESTINATION modules/autoload RENAME m_cap.so)

ADD_LIBRARY(m_capab MODULE m_capab.c)
SET_TARGET_PROPERTIES(m_capab PROPERTIES PREFIX "")
INSTALL(TARGETS m_capab DESTINATION modules/autoload RENAME m_capab.so)

ADD_LIBRARY(m_close MODULE m_close.c)
SET_TARGET_PROPERTIES(m_close PROPERTIES PREFIX "")
INSTALL(TARGETS m_close DESTINATION modules/autoload RENAME m_close.so)

ADD_LIBRARY(m_cmessage MODULE m_cmessage.c)
SET_TARGET_PROPERTIES(m_cmessage PROPERTIES PREFIX "")
INSTALL(TARGETS m_cmessage DESTINATION modules/autoload RENAME m_cmessage.so)

ADD_LIBRARY(m_connect MODULE m_connect.c)
SET_TARGET_PROPERTIES(m_connect PROPERTIES PREFIX "")
INSTALL(TARGETS m_connect DESTINATION modules/autoload RENAME m_connect.so)

ADD_LIBRARY(m_dline MODULE m_dline.c)
SET_TARGET_PROPERTIES(m_dline PROPERTIES PREFIX "")
INSTALL(TARGETS m_dline DESTINATION modules/autoload RENAME m_dline.so)

ADD_LIBRARY(m_encap MODULE m_encap.c)
SET_TARGET_PROPERTIES(m_encap PROPERTIES PREFIX "")
INSTALL(TARGETS m_encap DESTINATION modules/autoload RENAME m_encap.so)

ADD_LIBRARY(m_gline MODULE m_gline.c)
SET_TARGET_PROPERTIES(m_gline PROPERTIES PREFIX "")
INSTALL(TARGETS m_gline DESTINATION modules/autoload RENAME m_gline.so)

ADD_LIBRARY(m_gungline MODULE m_gungline.c)
SET_TARGET_PROPERTIES(m_gungline PROPERTIES PREFIX "")
INSTALL(TARGETS m_gungline DESTINATION modules/autoload RENAME m_gungline.so)

ADD_LIBRARY(m_help MODULE m_help.c)
SET_TARGET_PROPERTIES(m_help PROPERTIES PREFIX "")
INSTALL(TARGETS m_help DESTINATION modules/autoload RENAME m_help.so)

ADD_LIBRARY(m_info MODULE m_info.c)
SET_TARGET_PROPERTIES(m_info PROPERTIES PREFIX "")
INSTALL(TARGETS m_info DESTINATION modules/autoload RENAME m_info.so)

ADD_LIBRARY(m_invite MODULE m_invite.c)
SET_TARGET_PROPERTIES(m_invite PROPERTIES PREFIX "")
INSTALL(TARGETS m_invite DESTINATION modules/autoload RENAME m_invite.so)

ADD_LIBRARY(m_ison MODULE m_ison.c)
SET_TARGET_PROPERTIES(m_ison PROPERTIES PREFIX "")
INSTALL(TARGETS m_ison DESTINATION modules/autoload RENAME m_ison.so)

ADD_LIBRARY(m_kline MODULE m_kline.c)
SET_TARGET_PROPERTIES(m_kline PROPERTIES PREFIX "")
INSTALL(TARGETS m_kline DESTINATION modules/autoload RENAME m_kline.so)

ADD_LIBRARY(m_knock MODULE m_knock.c)
SET_TARGET_PROPERTIES(m_knock PROPERTIES PREFIX "")
INSTALL(TARGETS m_knock DESTINATION modules/autoload RENAME m_knock.so)

ADD_LIBRARY(m_links MODULE m_links.c)
SET_TARGET_PROPERTIES(m_links PROPERTIES PREFIX "")
INSTALL(TARGETS m_links DESTINATION modules/autoload RENAME m_links.so)

ADD_LIBRARY(m_list MODULE m_list.c)
SET_TARGET_PROPERTIES(m_list PROPERTIES PREFIX "")
INSTALL(TARGETS m_list DESTINATION modules/autoload RENAME m_list.so)

ADD_LIBRARY(m_locops MODULE m_locops.c)
SET_TARGET_PROPERTIES(m_locops PROPERTIES PREFIX "")
INSTALL(TARGETS m_locops DESTINATION modules/autoload RENAME m_locops.so)

ADD_LIBRARY(m_lusers MODULE m_lusers.c)
SET_TARGET_PROPERTIES(m_lusers PROPERTIES PREFIX "")
INSTALL(TARGETS m_lusers DESTINATION modules/autoload RENAME m_lusers.so)

ADD_LIBRARY(m_map MODULE m_map.c)
SET_TARGET_PROPERTIES(m_map PROPERTIES PREFIX "")
INSTALL(TARGETS m_map DESTINATION modules/autoload RENAME m_map.so)

ADD_LIBRARY(m_monitor MODULE m_monitor.c)
SET_TARGET_PROPERTIES(m_monitor PROPERTIES PREFIX "")
INSTALL(TARGETS m_monitor DESTINATION modules/autoload RENAME m_monitor.so)

ADD_LIBRARY(m_motd MODULE m_motd.c)
SET_TARGET_PROPERTIES(m_motd PROPERTIES PREFIX "")
INSTALL(TARGETS m_motd DESTINATION modules/autoload RENAME m_motd.so)

ADD_LIBRARY(m_names MODULE m_names.c)
SET_TARGET_PROPERTIES(m_names PROPERTIES PREFIX "")
INSTALL(TARGETS m_names DESTINATION modules/autoload RENAME m_names.so)

ADD_LIBRARY(m_oper MODULE m_oper.c)
SET_TARGET_PROPERTIES(m_oper PROPERTIES PREFIX "")
INSTALL(TARGETS m_oper DESTINATION modules/autoload RENAME m_oper.so)

ADD_LIBRARY(m_operspy MODULE m_operspy.c)
SET_TARGET_PROPERTIES(m_operspy PROPERTIES PREFIX "")
INSTALL(TARGETS m_operspy DESTINATION modules/autoload RENAME m_operspy.so)

ADD_LIBRARY(m_pass MODULE m_pass.c)
SET_TARGET_PROPERTIES(m_pass PROPERTIES PREFIX "")
INSTALL(TARGETS m_pass DESTINATION modules/autoload RENAME m_pass.so)

ADD_LIBRARY(m_ping MODULE m_ping.c)
SET_TARGET_PROPERTIES(m_ping PROPERTIES PREFIX "")
INSTALL(TARGETS m_ping DESTINATION modules/autoload RENAME m_ping.so)

ADD_LIBRARY(m_pong MODULE m_pong.c)
SET_TARGET_PROPERTIES(m_pong PROPERTIES PREFIX "")
INSTALL(TARGETS m_pong DESTINATION modules/autoload RENAME m_pong.so)

ADD_LIBRARY(m_post MODULE m_post.c)
SET_TARGET_PROPERTIES(m_post PROPERTIES PREFIX "")
INSTALL(TARGETS m_post DESTINATION modules/autoload RENAME m_post.so)

ADD_LIBRARY(m_rehash MODULE m_rehash.c)
SET_TARGET_PROPERTIES(m_rehash PROPERTIES PREFIX "")
INSTALL(TARGETS m_rehash DESTINATION modules/autoload RENAME m_rehash.so)

ADD_LIBRARY(m_restart MODULE m_restart.c)
SET_TARGET_PROPERTIES(m_restart PROPERTIES PREFIX "")
INSTALL(TARGETS m_restart DESTINATION modules/autoload RENAME m_restart.so)

ADD_LIBRARY(m_resv MODULE m_resv.c)
SET_TARGET_PROPERTIES(m_resv PROPERTIES PREFIX "")
INSTALL(TARGETS m_resv DESTINATION modules/autoload RENAME m_resv.so)

ADD_LIBRARY(m_services MODULE m_services.c)
SET_TARGET_PROPERTIES(m_services PROPERTIES PREFIX "")
INSTALL(TARGETS m_services DESTINATION modules/autoload RENAME m_services.so)

ADD_LIBRARY(m_set MODULE m_set.c)
SET_TARGET_PROPERTIES(m_set PROPERTIES PREFIX "")
INSTALL(TARGETS m_set DESTINATION modules/autoload RENAME m_set.so)

ADD_LIBRARY(m_stats MODULE m_stats.c)
SET_TARGET_PROPERTIES(m_stats PROPERTIES PREFIX "")
INSTALL(TARGETS m_stats DESTINATION modules/autoload RENAME m_stats.so)

ADD_LIBRARY(m_svinfo MODULE m_svinfo.c)
SET_TARGET_PROPERTIES(m_svinfo PROPERTIES PREFIX "")
INSTALL(TARGETS m_svinfo DESTINATION modules/autoload RENAME m_svinfo.so)

ADD_LIBRARY(m_tb MODULE m_tb.c)
SET_TARGET_PROPERTIES(m_tb PROPERTIES PREFIX "")
INSTALL(TARGETS m_tb DESTINATION modules/autoload RENAME m_tb.so)

ADD_LIBRARY(m_testline MODULE m_testline.c)
SET_TARGET_PROPERTIES(m_testline PROPERTIES PREFIX "")
INSTALL(TARGETS m_testline DESTINATION modules/autoload RENAME m_testline.so)

ADD_LIBRARY(m_testmask MODULE m_testmask.c)
SET_TARGET_PROPERTIES(m_testmask PROPERTIES PREFIX "")
INSTALL(TARGETS m_testmask DESTINATION modules/autoload RENAME m_testmask.so)

ADD_LIBRARY(m_time MODULE m_time.c)
SET_TARGET_PROPERTIES(m_time PROPERTIES PREFIX "")
INSTALL(TARGETS m_time DESTINATION modules/autoload RENAME m_time.so)

ADD_LIBRARY(m_topic MODULE m_topic.c)
SET_TARGET_PROPERTIES(m_topic PROPERTIES PREFIX "")
INSTALL(TARGETS m_topic DESTINATION modules/autoload RENAME m_topic.so)

ADD_LIBRARY(m_trace MODULE m_trace.c)
SET_TARGET_PROPERTIES(m_trace PROPERTIES PREFIX "")
INSTALL(TARGETS m_trace DESTINATION modules/autoload RENAME m_trace.so)

ADD_LIBRARY(m_unreject MODULE m_unreject.c)
SET_TARGET_PROPERTIES(m_unreject PROPERTIES PREFIX "")
INSTALL(TARGETS m_unreject DESTINATION modules/autoload RENAME m_unreject.so)

ADD_LIBRARY(m_user MODULE m_user.c)
SET_TARGET_PROPERTIES(m_user PROPERTIES PREFIX "")
INSTALL(TARGETS m_user DESTINATION modules/autoload RENAME m_user.so)

ADD_LIBRARY(m_userhost MODULE m_userhost.c)
SET_TARGET_PROPERTIES(m_userhost PROPERTIES PREFIX "")
INSTALL(TARGETS m_userhost DESTINATION modules/autoload RENAME m_userhost.so)

ADD_LIBRARY(m_version MODULE m_version.c)
SET_TARGET_PROPERTIES(m_version PROPERTIES PREFIX "")
INSTALL(TARGETS m_version DESTINATION modules/autoload RENAME m_version.so)

ADD_LIBRARY(m_wallops MODULE m_wallops.c)
SET_TARGET_PROPERTIES(m_wallops PROPERTIES PREFIX "")
INSTALL(TARGETS m_wallops DESTINATION modules/autoload RENAME m_wallops.so)

ADD_LIBRARY(m_who MODULE m_who.c)
SET_TARGET_PROPERTIES(m_who PROPERTIES PREFIX "")
INSTALL(TARGETS m_who DESTINATION modules/autoload RENAME m_who.so)

ADD_LIBRARY(m_whois MODULE m_whois.c)
SET_TARGET_PROPERTIES(m_whois PROPERTIES PREFIX "")
INSTALL(TARGETS m_whois DESTINATION modules/autoload RENAME m_whois.so)

ADD_LIBRARY(m_whowas MODULE m_whowas.c)
SET_TARGET_PROPERTIES(m_whowas PROPERTIES PREFIX "")
INSTALL(TARGETS m_whowas DESTINATION modules/autoload RENAME m_whowas.so)

ADD_LIBRARY(m_xline MODULE m_xline.c)
SET_TARGET_PROPERTIES(m_xline PROPERTIES PREFIX "")
INSTALL(TARGETS m_xline DESTINATION modules/autoload RENAME m_xline.so)

