
PROJECT(modules)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE_DIRECTORIES(${libratbox_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${libratbox_BINARY_DIR} ${bluebox_BINARY_DIR})
INCLUDE_DIRECTORIES(${bluebox_SOURCE_DIR}/include)

ADD_LIBRARY(m_die MODULE core/m_die.c)
SET_TARGET_PROPERTIES(m_die PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_die ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_die DESTINATION modules)

ADD_LIBRARY(m_error MODULE core/m_error.c)
SET_TARGET_PROPERTIES(m_error PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_error ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_error DESTINATION modules)

ADD_LIBRARY(m_join MODULE core/m_join.c)
SET_TARGET_PROPERTIES(m_join PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_join ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_join DESTINATION modules)

ADD_LIBRARY(m_kick MODULE core/m_kick.c)
SET_TARGET_PROPERTIES(m_kick PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_kick ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_kick DESTINATION modules)

ADD_LIBRARY(m_kill MODULE core/m_kill.c)
SET_TARGET_PROPERTIES(m_kill PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_kill ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_kill DESTINATION modules)

ADD_LIBRARY(m_message MODULE core/m_message.c)
SET_TARGET_PROPERTIES(m_message PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_message ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_message DESTINATION modules)

ADD_LIBRARY(m_mode MODULE core/m_mode.c)
SET_TARGET_PROPERTIES(m_mode PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_mode ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_mode DESTINATION modules)

ADD_LIBRARY(m_nick MODULE core/m_nick.c)
SET_TARGET_PROPERTIES(m_nick PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_nick ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_nick DESTINATION modules)

ADD_LIBRARY(m_part MODULE core/m_part.c)
SET_TARGET_PROPERTIES(m_part PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_part ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_part DESTINATION modules)

ADD_LIBRARY(m_quit MODULE core/m_quit.c)
SET_TARGET_PROPERTIES(m_quit PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_quit ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_quit DESTINATION modules)

ADD_LIBRARY(m_server MODULE core/m_server.c)
SET_TARGET_PROPERTIES(m_server PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_server ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_server DESTINATION modules)

ADD_LIBRARY(m_squit MODULE core/m_squit.c)
SET_TARGET_PROPERTIES(m_squit PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_squit ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_squit DESTINATION modules)

ADD_LIBRARY(m_accept MODULE m_accept.c)
SET_TARGET_PROPERTIES(m_accept PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_accept ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_accept DESTINATION modules/autoload)

ADD_LIBRARY(m_admin MODULE m_admin.c)
SET_TARGET_PROPERTIES(m_admin PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_admin ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_admin DESTINATION modules/autoload)

ADD_LIBRARY(m_adminwall MODULE m_adminwall.c)
SET_TARGET_PROPERTIES(m_adminwall PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_adminwall ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_adminwall DESTINATION modules/autoload)

ADD_LIBRARY(m_away MODULE m_away.c)
SET_TARGET_PROPERTIES(m_away PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_away ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_away DESTINATION modules/autoload)

ADD_LIBRARY(m_cap MODULE m_cap.c)
SET_TARGET_PROPERTIES(m_cap PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_cap ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_cap DESTINATION modules/autoload)

ADD_LIBRARY(m_capab MODULE m_capab.c)
SET_TARGET_PROPERTIES(m_capab PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_capab ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_capab DESTINATION modules/autoload)

ADD_LIBRARY(m_close MODULE m_close.c)
SET_TARGET_PROPERTIES(m_close PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_close ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_close DESTINATION modules/autoload)

ADD_LIBRARY(m_cmessage MODULE m_cmessage.c)
SET_TARGET_PROPERTIES(m_cmessage PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_cmessage ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_cmessage DESTINATION modules/autoload)

ADD_LIBRARY(m_connect MODULE m_connect.c)
SET_TARGET_PROPERTIES(m_connect PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_connect ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_connect DESTINATION modules/autoload)

ADD_LIBRARY(m_dline MODULE m_dline.c)
SET_TARGET_PROPERTIES(m_dline PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_dline ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_dline DESTINATION modules/autoload)

ADD_LIBRARY(m_encap MODULE m_encap.c)
SET_TARGET_PROPERTIES(m_encap PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_encap ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_encap DESTINATION modules/autoload)

ADD_LIBRARY(m_gline MODULE m_gline.c)
SET_TARGET_PROPERTIES(m_gline PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_gline ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_gline DESTINATION modules/autoload)

ADD_LIBRARY(m_gungline MODULE m_gungline.c)
SET_TARGET_PROPERTIES(m_gungline PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_gungline ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_gungline DESTINATION modules/autoload)

ADD_LIBRARY(m_help MODULE m_help.c)
SET_TARGET_PROPERTIES(m_help PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_help ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_help DESTINATION modules/autoload)

ADD_LIBRARY(m_info MODULE m_info.c)
SET_TARGET_PROPERTIES(m_info PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_info ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_info DESTINATION modules/autoload)

ADD_LIBRARY(m_invite MODULE m_invite.c)
SET_TARGET_PROPERTIES(m_invite PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_invite ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_invite DESTINATION modules/autoload)

ADD_LIBRARY(m_ison MODULE m_ison.c)
SET_TARGET_PROPERTIES(m_ison PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_ison ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_ison DESTINATION modules/autoload)

ADD_LIBRARY(m_kline MODULE m_kline.c)
SET_TARGET_PROPERTIES(m_kline PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_kline ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_kline DESTINATION modules/autoload)

ADD_LIBRARY(m_knock MODULE m_knock.c)
SET_TARGET_PROPERTIES(m_knock PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_knock ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_knock DESTINATION modules/autoload)

ADD_LIBRARY(m_links MODULE m_links.c)
SET_TARGET_PROPERTIES(m_links PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_links ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_links DESTINATION modules/autoload)

ADD_LIBRARY(m_list MODULE m_list.c)
SET_TARGET_PROPERTIES(m_list PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_list ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_list DESTINATION modules/autoload)

ADD_LIBRARY(m_locops MODULE m_locops.c)
SET_TARGET_PROPERTIES(m_locops PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_locops ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_locops DESTINATION modules/autoload)

ADD_LIBRARY(m_lusers MODULE m_lusers.c)
SET_TARGET_PROPERTIES(m_lusers PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_lusers ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_lusers DESTINATION modules/autoload)

ADD_LIBRARY(m_map MODULE m_map.c)
SET_TARGET_PROPERTIES(m_map PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_map ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_map DESTINATION modules/autoload)

ADD_LIBRARY(m_monitor MODULE m_monitor.c)
SET_TARGET_PROPERTIES(m_monitor PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_monitor ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_monitor DESTINATION modules/autoload)

ADD_LIBRARY(m_motd MODULE m_motd.c)
SET_TARGET_PROPERTIES(m_motd PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_motd ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_motd DESTINATION modules/autoload)

ADD_LIBRARY(m_names MODULE m_names.c)
SET_TARGET_PROPERTIES(m_names PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_names ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_names DESTINATION modules/autoload)

ADD_LIBRARY(m_oper MODULE m_oper.c)
SET_TARGET_PROPERTIES(m_oper PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_oper ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_oper DESTINATION modules/autoload)

ADD_LIBRARY(m_operspy MODULE m_operspy.c)
SET_TARGET_PROPERTIES(m_operspy PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_operspy ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_operspy DESTINATION modules/autoload)

ADD_LIBRARY(m_pass MODULE m_pass.c)
SET_TARGET_PROPERTIES(m_pass PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_pass ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_pass DESTINATION modules/autoload)

ADD_LIBRARY(m_ping MODULE m_ping.c)
SET_TARGET_PROPERTIES(m_ping PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_ping ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_ping DESTINATION modules/autoload)

ADD_LIBRARY(m_pong MODULE m_pong.c)
SET_TARGET_PROPERTIES(m_pong PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_pong ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_pong DESTINATION modules/autoload)

ADD_LIBRARY(m_post MODULE m_post.c)
SET_TARGET_PROPERTIES(m_post PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_post ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_post DESTINATION modules/autoload)

ADD_LIBRARY(m_rehash MODULE m_rehash.c)
SET_TARGET_PROPERTIES(m_rehash PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_rehash ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_rehash DESTINATION modules/autoload)

ADD_LIBRARY(m_restart MODULE m_restart.c)
SET_TARGET_PROPERTIES(m_restart PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_restart ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_restart DESTINATION modules/autoload)

ADD_LIBRARY(m_resv MODULE m_resv.c)
SET_TARGET_PROPERTIES(m_resv PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_resv ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_resv DESTINATION modules/autoload)

ADD_LIBRARY(m_services MODULE m_services.c)
SET_TARGET_PROPERTIES(m_services PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_services ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_services DESTINATION modules/autoload)

ADD_LIBRARY(m_set MODULE m_set.c)
SET_TARGET_PROPERTIES(m_set PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_set ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_set DESTINATION modules/autoload)

ADD_LIBRARY(m_stats MODULE m_stats.c)
SET_TARGET_PROPERTIES(m_stats PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_stats ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_stats DESTINATION modules/autoload)

ADD_LIBRARY(m_svinfo MODULE m_svinfo.c)
SET_TARGET_PROPERTIES(m_svinfo PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_svinfo ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_svinfo DESTINATION modules/autoload)

ADD_LIBRARY(m_tb MODULE m_tb.c)
SET_TARGET_PROPERTIES(m_tb PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_tb ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_tb DESTINATION modules/autoload)

ADD_LIBRARY(m_testline MODULE m_testline.c)
SET_TARGET_PROPERTIES(m_testline PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_testline ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_testline DESTINATION modules/autoload)

ADD_LIBRARY(m_testmask MODULE m_testmask.c)
SET_TARGET_PROPERTIES(m_testmask PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_testmask ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_testmask DESTINATION modules/autoload)

ADD_LIBRARY(m_time MODULE m_time.c)
SET_TARGET_PROPERTIES(m_time PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_time ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_time DESTINATION modules/autoload)

ADD_LIBRARY(m_topic MODULE m_topic.c)
SET_TARGET_PROPERTIES(m_topic PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_topic ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_topic DESTINATION modules/autoload)

ADD_LIBRARY(m_trace MODULE m_trace.c)
SET_TARGET_PROPERTIES(m_trace PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_trace ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_trace DESTINATION modules/autoload)

ADD_LIBRARY(m_unreject MODULE m_unreject.c)
SET_TARGET_PROPERTIES(m_unreject PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_unreject ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_unreject DESTINATION modules/autoload)

ADD_LIBRARY(m_user MODULE m_user.c)
SET_TARGET_PROPERTIES(m_user PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_user ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_user DESTINATION modules/autoload)

ADD_LIBRARY(m_userhost MODULE m_userhost.c)
SET_TARGET_PROPERTIES(m_userhost PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_userhost ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_userhost DESTINATION modules/autoload)

ADD_LIBRARY(m_version MODULE m_version.c)
SET_TARGET_PROPERTIES(m_version PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_version ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_version DESTINATION modules/autoload)

ADD_LIBRARY(m_wallops MODULE m_wallops.c)
SET_TARGET_PROPERTIES(m_wallops PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_wallops ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_wallops DESTINATION modules/autoload)

ADD_LIBRARY(m_who MODULE m_who.c)
SET_TARGET_PROPERTIES(m_who PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_who ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_who DESTINATION modules/autoload)

ADD_LIBRARY(m_whois MODULE m_whois.c)
SET_TARGET_PROPERTIES(m_whois PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_whois ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_whois DESTINATION modules/autoload)

ADD_LIBRARY(m_whowas MODULE m_whowas.c)
SET_TARGET_PROPERTIES(m_whowas PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_whowas ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_whowas DESTINATION modules/autoload)

ADD_LIBRARY(m_xline MODULE m_xline.c)
SET_TARGET_PROPERTIES(m_xline PROPERTIES PREFIX "" SUFFIX ${SHLIBEXT})
IF(APPLE)
  TARGET_LINK_LIBRARIES(m_xline ratboxcore ratbox)
ENDIF(APPLE)
INSTALL(TARGETS m_xline DESTINATION modules/autoload)

