
PROJECT(ssld)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

INCLUDE(CheckIncludeFiles)
INCLUDE(FindZLIB)

CHECK_INCLUDE_FILES(sys/resource.h HAVE_SYS_RESOURCE_H)

INCLUDE_DIRECTORIES(../include ${CMAKE_BINARY_DIR} ${libratbox_SOURCE_DIR}/include ${libratbox_BINARY_DIR})
ADD_EXECUTABLE(ssld ssld.c)

IF (ZLIB_FOUND)
  INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(ssld ${ZLIB_LIBRARIES})
  ADD_DEFINITIONS(-DHAVE_ZLIB)
ENDIF (ZLIB_FOUND)

ADD_DEPENDENCIES(ssld libratbox)
TARGET_LINK_LIBRARIES(ssld ratbox)

INSTALL(TARGETS ssld DESTINATION libexec/bluebox)
