
PROJECT(libsqlite3)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(sqlite3_LIB_SRCS
  sqlite3.c
)

INCLUDE_DIRECTORIES(include ${PROJECT_BINARY_DIR})

ADD_LIBRARY(sqlite3 STATIC ${sqlite3_LIB_SRCS})
ADD_EXECUTABLE(ratbox-sqlite3 shell.c)
ADD_DEPENDENCIES(ratbox-sqlite3 sqlite3)
TARGET_LINK_LIBRARIES(ratbox-sqlite3 sqlite3)
TARGET_LINK_LIBRARIES(ratbox-sqlite3 pthread)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(ratbox-sqlite3 dl)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

SET_TARGET_PROPERTIES(sqlite3 PROPERTIES VERSION 4.2.0 SOVERSION 4)
INSTALL(TARGETS sqlite3 DESTINATION lib)
